generate pdf as response

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "pdfjs": "^2.5.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "tmp": "^0.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -35,6 +36,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
+    "@types/tmp": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "eslint": "^8.42.0",
